# bulkompare-rs

./: .gitattributes  .gitignore  README.md  package.json
src/: App.css  App.js  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: comparator.rs  config.rs  csv_set.rs  lib.rs  main.rs  selection.rs
src-tauri/src/helpers/: file_iterator.rs  mod.rs
src-tauri/tests/data/a/: file1.tsv
src-tauri/tests/data/b/: file1.tsv
src/components/: ResultDisplay.jsx  StdMain.js  TopBar.js  WorkSpace.js
src/components/NavBar/: ComparatorConfigControl.js  ConfigControl.js  LeftDrawer.js  NavBar.js  ResultControl.js  Steps.js  SuperSelect.js
src/components/ResultDisplay/: ByExtResultDisplay.jsx  Differences.jsx  InOne.jsx  ResultDataGrid.jsx  ResultDisplay.jsx  Summary.jsx  SummaryDisplay.jsx
src/components/selection/: ColumnSelection.jsx  FileProperties.jsx  SourceSelection.jsx
src/constants/: constants.js  defaults.js
