[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
tauri = { version = "1.0.5", features = ["api-all"] }
anyhow = "1.0"
encoding_rs = "0.8.26"
encoding_rs_io = "0.1.7"
csv = "1.1"
bulkompare-custom = { path = "../../bulkompare-custom", optional = true }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
